--- a/Bayesian eruption estimate/Bayesian_input_file.ipynb
+++ b/Bayesian eruption estimate/Bayesian_input_file.ipynb
@@ -70,7 +70,7 @@
     "    #\"Bootstrapped\",\n",
     "    \"UniformDistribution\"]\n",
     "    for i in PriorDist:\n",
-    "        calculate_bayesian_age(data_zrc,unit_of_interest=variable_name, n_chain=15000, dist= i, model_age=col_model_age, mean_sigma = col_model_age_1sigma,do_plot=False)\n",
+    "        calculate_bayesian_age(data_zrc,unit_of_interest=variable_name, n_chain=15000, dist= i, model_age=col_model_age, mean_sigma = col_model_age_1sigma,do_plot=True)\n",
     "        print(f'Bayesian age calculation for {variable_name} with {i} completed.')\n",
     "output_file = f'{directory_data}{name_data_file}_bayesian_results.xlsx'\n",
     "data_zrc.to_excel(output_file, index=False)"
